tests/syntax_error/import_after_def.jou
def foo() -> void:
    return

from "stdlib/io.jou" import printf  # Error: expected a definition or declaration, got the 'from' keyword
